<ui version="4.0" >
 <class>addTorrentDialog</class>
 <widget class="QDialog" name="addTorrentDialog" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>440</width>
    <height>389</height>
   </rect>
  </property>
  <property name="windowTitle" >
   <string>Torrent addition dialog</string>
  </property>
  <layout class="QVBoxLayout" >
   <property name="margin" >
    <number>9</number>
   </property>
   <property name="spacing" >
    <number>6</number>
   </property>
   <item>
    <widget class="QLabel" name="fileNameLbl" >
     <property name="text" >
      <string/>
     </property>
    </widget>
   </item>
   <item>
    <widget class="Line" name="line" >
     <property name="orientation" >
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="savePathLbl" >
     <property name="font" >
      <font>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text" >
      <string>Save path:</string>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <property name="margin" >
      <number>0</number>
     </property>
     <property name="spacing" >
      <number>6</number>
     </property>
     <item>
      <widget class="QLineEdit" name="savePathTxt" />
     </item>
     <item>
      <widget class="QToolButton" name="browseButton" >
       <property name="text" >
        <string>...</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLabel" name="torrentContentLbl" >
     <property name="font" >
      <font>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text" >
      <string>Torrent content:</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QTreeWidget" name="torrentContentList" >
     <property name="contextMenuPolicy" >
      <enum>Qt::CustomContextMenu</enum>
     </property>
     <property name="selectionMode" >
      <enum>QAbstractItemView::ExtendedSelection</enum>
     </property>
     <property name="indentation" >
      <number>2</number>
     </property>
     <column>
      <property name="text" >
       <string>File name</string>
      </property>
     </column>
     <column>
      <property name="text" >
       <string>File size</string>
      </property>
     </column>
     <column>
      <property name="text" >
       <string>Selected</string>
      </property>
     </column>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="checkIncrementalDL" >
     <property name="text" >
      <string>Download in correct order (slower but good for previewing)</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="addInPause" >
     <property name="text" >
      <string>Add to download list in paused state</string>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <property name="margin" >
      <number>0</number>
     </property>
     <property name="spacing" >
      <number>6</number>
     </property>
     <item>
      <spacer>
       <property name="orientation" >
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" >
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="OkButton" >
       <property name="text" >
        <string>Add</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="CancelButton" >
       <property name="text" >
        <string>Cancel</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer>
       <property name="orientation" >
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" >
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
  </layout>
  <action name="actionSelect" >
   <property name="text" >
    <string>select</string>
   </property>
  </action>
  <action name="actionUnselect" >
   <property name="text" >
    <string>Unselect</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
